// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/Loader Check snapshots should renders correctly 1`] = `null`;

exports[`Consonant/Loader Check snapshots should renders correctly 2`] = `
<div
  className="consonant-loader  "
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 3`] = `
<div
  className="consonant-loader consonant-loader_medium "
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 4`] = `
<div
  className="consonant-loader consonant-loader_big "
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 5`] = `
<div
  className="consonant-loader consonant-loader_medium consonant-loader_absolute"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Consonant/Loader Check snapshots should renders correctly 6`] = `
<div
  className="consonant-loader consonant-loader_big consonant-loader_absolute"
>
  <div />
  <div />
  <div />
  <div />
</div>
`;
